Switching between activities

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ActivityLifecycle">
+        <activity android:name=".XPageActivity"></activity>
+        <activity android:name=".YPageActivity" />
+        <activity android:name=".BPageActivity" />
+        <activity android:name=".APageActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
